--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <h1>Sinar Mas <span>Jaya.</span></h1>
+        <h1>Sumber Mas <span>Jaya.</span></h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -63,7 +63,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6 text-center">
-            <h2 data-aos="fade-down">Selamat Datang di <span>Sinar Mas Jaya</span></h2>
+            <h2 data-aos="fade-down">Selamat Datang di <span>Sumber Mas Jaya</span></h2>
             <p data-aos="fade-up">Sumber Mas Jaya merupakan perusahaan yang bergerak di bidang perdagangan galvalum,
               berbagai macam material atap dan plafon.</p>
             <a data-aos="fade-up" data-aos-delay="200" href="product.html" class="btn-get-started"> Daftar Produk</a>
