--- a/index.html
+++ b/index.html
@@ -195,12 +195,11 @@
                 <h4>Atap Spandek Pasir Merah Maroon</h4>
                 <p>ATAP SPANDEK PASIR dengan tebal : 0.25mm dan dapat memilih warna merah,biru,coklat,hitam dll
                   </p>
-                <a href="assets/img/product/spandek-pasir.jpg" title="Atap Spandek Pasir"
-                  data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link">
-                  <i class="fa-solid fa-magnifying-glass-plus"></i></a>
                   <!-- ====== ketika hover harus klik ke tokopedia ====== -->
-                <a href="project-details.html" title="More Details" class="details-link">
-                  <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                <a href="https://www.tokopedia.com/sumbermasjayasby/atap-spandek-pasir-merah-maroon?extParam=src%3Dshop%26whid%3D10722555" 
+                title="Atap Spandek Pasir" class="stretched-link">
+                  <!-- <i class="bi bi-link-45deg"></i> -->
+                </a>
               </div>
             </div>
           </div><!-- End Projects Item -->
@@ -211,11 +210,10 @@
               <div class="portfolio-info">
                 <h4>CANAL C75/0.75 KENCANA</h4>
                 <p>KANAL C 75/0.75 KENCANA dengan Tebal : 0,75mm dan Panjang : 6m</p>
-                <a href="assets/img/product/canal-kencana.jpg" title="Canal Kencana"
-                  data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i
-                    class="bi bi-zoom-in"></i></a>
-                <a href="project-details.html" title="More Details" class="details-link"><i
-                    class="bi bi-link-45deg"></i></a>
+                <!-- ====== ketika hover harus klik ke tokopedia ====== -->
+                <a href="https://www.tokopedia.com/sumbermasjayasby/canal-c75-0-75-kencana?extParam=whid%3D10722555%26src%3Dshop" title="Canal Kencana" class="stretched-link">
+                  <!-- <i class="bi bi-link-45deg"></i> -->
+                </a>
               </div>
             </div>
           </div><!-- End Projects Item -->
@@ -226,10 +224,10 @@
               <div class="portfolio-info">
                 <h4>Baja Ringan Hollow 2X4</h4>
                 <p>HOLLOW 2X4 dengan Tebal : 0,30mm, Dimensi : 1,6cm x 3,0cm dan Panjang : 4meter</p>
-                <a href="assets/img/product/hollow-24.png" title="Baja Ringan Hollow" data-gallery="portfolio-gallery-repairs"
-                  class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="project-details.html" title="More Details" class="details-link"><i
-                    class="bi bi-link-45deg"></i></a>
+                <!-- ====== ketika hover harus klik ke tokopedia ====== -->
+                <a href="https://www.tokopedia.com/sumbermasjayasby/baja-ringan-hollow-2x4?extParam=src%3Dshop%26whid%3D10722555" title="Baja Ringan Hollow" class="stretched-link">
+                  <!-- <i class="bi bi-link-45deg"></i> -->
+                </a>
               </div>
             </div>
           </div><!-- End Projects Item -->
@@ -240,11 +238,10 @@
               <div class="portfolio-info">
                 <h4>Self Drilling Screw</h4>
                 <p>Sekrup Baja Ringan /Self Drilling Screw / Sekrup Spandek</p>
-                <a href="assets/img/product/sekrup-drilling.jpg" title="Sekrup Baja Ringan"
-                  data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i
-                    class="bi bi-zoom-in"></i></a>
-                <a href="project-details.html" title="More Details" class="details-link"><i
-                    class="bi bi-link-45deg"></i></a>
+                <!-- ====== ketika hover harus klik ke tokopedia ====== -->
+                <a href="https://www.tokopedia.com/sumbermasjayasby/sekrup-baja-ringan-self-drilling-screw-sekrup-spandek-12-24-x-50?extParam=src%3Dshop%26whid%3D10722555" title="Sekrup Baja Ringan" class="stretched-link">
+                  <!-- <i class="bi bi-link-45deg"></i> -->
+                </a>
               </div>
             </div>
           </div><!-- End Projects Item -->
@@ -255,11 +252,10 @@
               <div class="portfolio-info">
                 <h4>SHADOW LINE GALVALUM /TALI AIR PLAFON</h4>
                 <p>Shadow line / Tali Air Gypsum dengan Panjang : 3 meter dan Tebal : 0.30 mm</p>
-                <a href="assets/img/product/shadow-line.jpg" title="SHADOW LINE GALVALUM /TALI AIR PLAFON"
-                  data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link"><i
-                    class="bi bi-zoom-in"></i></a>
-                <a href="project-details.html" title="More Details" class="details-link"><i
-                    class="bi bi-link-45deg"></i></a>
+                <!-- ====== ketika hover harus klik ke tokopedia ====== -->
+                <a href="https://www.tokopedia.com/sumbermasjayasby/shadow-line-galvalum-tali-air-plafon?extParam=src%3Dshop%26whid%3D10722555" title="Tali Air Gypsum" class="stretched-link">
+                  <!-- <i class="bi bi-link-45deg"></i> -->
+                </a>
               </div>
             </div>
           </div><!-- End Projects Item -->
@@ -270,10 +266,10 @@
               <div class="portfolio-info">
                 <h4>GYPSUM BOARD 9mm</h4>
                 <p>Papan Gypsum untuk plafon dan partisi dengan Ukuran :1200x2400 dan Tebal : 9mm</p>
-                <a href="assets/img/product/gypsum.jpg" title="GYPSUM BOARD 9mm" data-gallery="portfolio-gallery-repairs"
-                  class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="project-details.html" title="More Details" class="details-link"><i
-                    class="bi bi-link-45deg"></i></a>
+                <!-- ====== ketika hover harus klik ke tokopedia ====== -->
+                <a href="https://www.tokopedia.com/sumbermasjayasby/gypsum-board-9mm?extParam=src%3Dshop%26whid%3D10722555" title="Atap Spandek Pasir" class="stretched-link">
+                  <!-- <i class="bi bi-link-45deg"></i> -->
+                </a>
               </div>
             </div>
           </div><!-- End Projects Item -->
@@ -558,6 +554,7 @@
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Useful Links</h4>
             <ul>
+              <li><a href="index.html">Beranda</a></li>
               <li><a href="product.html">Daftar Produk</a></li>
             </ul>
           </div><!-- End footer links column-->
