--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/fontawesome/css/all.min.css" rel="stylesheet">
   <link href="assets/aos/aos.css" rel="stylesheet">
-  <link href="assets/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <!-- <link href="assets/glightbox/css/glightbox.min.css" rel="stylesheet"> -->
   <link href="assets/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
 
@@ -113,8 +113,7 @@
             <h3>Produk</h3>
             <p> Menyediakan berbagai kebutuhan material galvalum, atap dan plafon dengan kualitas yang terbaik dan sesuai dengan kebutuhan pelanggan.
             </p>
-            <a href="product.html" class="readmore stretched-link">Learn more <i
-                class="fa fa-arrow-right"></i></a>
+            <a href="product.html" class="readmore stretched-link">Learn more <i class="fa fa-arrow-right"></i></a>
           </div>
         </div><!-- End Service Item -->
 
@@ -187,7 +186,6 @@
       <div class="portfolio-isotope" data-portfolio-layout="masonry"
         data-portfolio-sort="original-order">
         <div class="row gy-4 portfolio-container" data-aos="fade-up" data-aos-delay="200">
-
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-content h-100">
               <img src="assets/img/product/spandek-pasir.jpg" class="img-fluid" alt="">
@@ -197,7 +195,7 @@
                   </p>
                   <!-- ====== ketika hover harus klik ke tokopedia ====== -->
                 <a href="https://www.tokopedia.com/sumbermasjayasby/atap-spandek-pasir-merah-maroon?extParam=src%3Dshop%26whid%3D10722555" 
-                title="Atap Spandek Pasir" class="stretched-link">
+                title="Atap Spandek Pasir" class="stretched-link" target="_blank">
                   <!-- <i class="bi bi-link-45deg"></i> -->
                 </a>
               </div>
@@ -211,7 +209,8 @@
                 <h4>CANAL C75/0.75 KENCANA</h4>
                 <p>KANAL C 75/0.75 KENCANA dengan Tebal : 0,75mm dan Panjang : 6m</p>
                 <!-- ====== ketika hover harus klik ke tokopedia ====== -->
-                <a href="https://www.tokopedia.com/sumbermasjayasby/canal-c75-0-75-kencana?extParam=whid%3D10722555%26src%3Dshop" title="Canal Kencana" class="stretched-link">
+                <a href="https://www.tokopedia.com/sumbermasjayasby/canal-c75-0-75-kencana?extParam=whid%3D10722555%26src%3Dshop" 
+                title="Canal Kencana" class="stretched-link" target="_blank">
                   <!-- <i class="bi bi-link-45deg"></i> -->
                 </a>
               </div>
@@ -225,7 +224,8 @@
                 <h4>Baja Ringan Hollow 2X4</h4>
                 <p>HOLLOW 2X4 dengan Tebal : 0,30mm, Dimensi : 1,6cm x 3,0cm dan Panjang : 4meter</p>
                 <!-- ====== ketika hover harus klik ke tokopedia ====== -->
-                <a href="https://www.tokopedia.com/sumbermasjayasby/baja-ringan-hollow-2x4?extParam=src%3Dshop%26whid%3D10722555" title="Baja Ringan Hollow" class="stretched-link">
+                <a href="https://www.tokopedia.com/sumbermasjayasby/baja-ringan-hollow-2x4?extParam=src%3Dshop%26whid%3D10722555" 
+                title="Baja Ringan Hollow" class="stretched-link" target="_blank">
                   <!-- <i class="bi bi-link-45deg"></i> -->
                 </a>
               </div>
@@ -239,7 +239,8 @@
                 <h4>Self Drilling Screw</h4>
                 <p>Sekrup Baja Ringan /Self Drilling Screw / Sekrup Spandek</p>
                 <!-- ====== ketika hover harus klik ke tokopedia ====== -->
-                <a href="https://www.tokopedia.com/sumbermasjayasby/sekrup-baja-ringan-self-drilling-screw-sekrup-spandek-12-24-x-50?extParam=src%3Dshop%26whid%3D10722555" title="Sekrup Baja Ringan" class="stretched-link">
+                <a href="https://www.tokopedia.com/sumbermasjayasby/sekrup-baja-ringan-self-drilling-screw-sekrup-spandek-12-24-x-50?extParam=src%3Dshop%26whid%3D10722555" 
+                title="Sekrup Baja Ringan" class="stretched-link" target="_blank">
                   <!-- <i class="bi bi-link-45deg"></i> -->
                 </a>
               </div>
@@ -253,7 +254,8 @@
                 <h4>SHADOW LINE GALVALUM /TALI AIR PLAFON</h4>
                 <p>Shadow line / Tali Air Gypsum dengan Panjang : 3 meter dan Tebal : 0.30 mm</p>
                 <!-- ====== ketika hover harus klik ke tokopedia ====== -->
-                <a href="https://www.tokopedia.com/sumbermasjayasby/shadow-line-galvalum-tali-air-plafon?extParam=src%3Dshop%26whid%3D10722555" title="Tali Air Gypsum" class="stretched-link">
+                <a href="https://www.tokopedia.com/sumbermasjayasby/shadow-line-galvalum-tali-air-plafon?extParam=src%3Dshop%26whid%3D10722555" 
+                title="Tali Air Gypsum" class="stretched-link" target="_blank">
                   <!-- <i class="bi bi-link-45deg"></i> -->
                 </a>
               </div>
@@ -267,7 +269,8 @@
                 <h4>GYPSUM BOARD 9mm</h4>
                 <p>Papan Gypsum untuk plafon dan partisi dengan Ukuran :1200x2400 dan Tebal : 9mm</p>
                 <!-- ====== ketika hover harus klik ke tokopedia ====== -->
-                <a href="https://www.tokopedia.com/sumbermasjayasby/gypsum-board-9mm?extParam=src%3Dshop%26whid%3D10722555" title="Atap Spandek Pasir" class="stretched-link">
+                <a href="https://www.tokopedia.com/sumbermasjayasby/gypsum-board-9mm?extParam=src%3Dshop%26whid%3D10722555" 
+                title="Atap Spandek Pasir" class="stretched-link" target="_blank">
                   <!-- <i class="bi bi-link-45deg"></i> -->
                 </a>
               </div>
@@ -409,8 +412,8 @@
     </div>
   </section><!-- End Testimonials Section -->
   
-  <!-- ======= Alt Services Section ======= -->
-  <section id="about" class="alt-services">
+  <!-- ======= About Us Section ======= -->
+  <section id="about" class="about">
     <div class="container" data-aos="fade-up">
 
       <div class="section-header">
@@ -457,7 +460,7 @@
       </div>
 
     </div>
-  </section><!-- End Alt Services Section -->
+  </section><!-- End About us Section -->
   
   <!-- ======= Contact Section ======= -->
   <section id="contact" class="contact">
@@ -477,41 +480,41 @@
         </div><!-- End Google Maps -->
 
         <div class="col-lg-6">
-              <div class="info-item  d-flex flex-column justify-content-center align-items-center mb-3">
-                <i class="bi bi-map"></i>
-                <h3>Alamat</h3>
-                <p>Jalan Raya Menganti Wiyung no.24 Surabaya.</p>
-          </div>
 
           <div class="row">
             <div class="col-lg-6 col-md-6">
               <!-- <a href="mailto:example@gmail.com" target="_blank"> -->
-              <!-- <a href="https://mail.google.com/mail/u/0/?tf=cm&fs=1&to=exemple@gmail.com" target="_blank">
-                <div class="info-item d-flex flex-column justify-content-center align-items-center">
+              <a href="https://mail.google.com/mail/u/0/?tf=cm&fs=1&to=jayasumbermas@gmail.com" target="_blank">
+                <div class="info-item d-flex flex-column justify-content-center align-items-center mb-3">
                   <i class="bi bi-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>contact@example.com</p>
+                  <p>jayasumbermas@gmail.com</p>
                 </div>
-              </a> -->
-              <!-- <a href="mailto:example@gmail.com" target="_blank"> -->
-              <a href="https://api.whatsapp.com/send?text=Hello%2C%20Kami%20Dapat%20No%20Anda%20Dari%20Indonetwork&phone=6282245519862" target="_blank">
-                <div class="info-item d-flex flex-column justify-content-center align-items-center">
-                  <!-- <i class="bi bi-envelope"></i> -->
-                  <i class="bi bi-whatsapp"></i>
-                  <h3>Whatsapp</h3>
-                  <p>+628123241512</p>
-                </div>
-              </a>
-            </div><!-- End Info Item -->
-    
+              </a> 
+            </div>
             <div class="col-lg-6 col-md-6">
-              <!-- <a href="https://www.instagram.com/sumbermasjayasby/" target="_blank">
+              <a href="https://www.instagram.com/sumbermasjayasby/" target="_blank">
                 <div class="info-item  d-flex flex-column justify-content-center align-items-center">
                   <i class="bi bi-instagram"></i>
                   <h3>instagram</h3>
                   <p>@sumbermasjayasby</p>
                 </div>
-              </a> -->
+              </a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-6 col-md-6">
+              <a href="https://api.whatsapp.com/send?text=Hello%2C%20Kami%20Dapat%20No%20Anda%20Dari%20Website&phone=628113107879" target="_blank">
+                <div class="info-item d-flex flex-column justify-content-center align-items-center">
+                  <!-- <i class="bi bi-envelope"></i> -->
+                  <i class="bi bi-whatsapp"></i>
+                  <h3>Whatsapp</h3>
+                  <p>+628113107879</p>
+                </div>
+              </a>
+            </div><!-- End Info Item -->
+    
+            <div class="col-lg-6 col-md-6">
               <a href="https://facebook.com/bajaringansmjsby" target="_blank">
                 <div class="info-item  d-flex flex-column justify-content-center align-items-center">
                   <i class="bi bi-facebook"></i>
@@ -541,12 +544,12 @@
               <h3>Sumber Mas Jaya</h3>
               <p>
                 Jalan Raya Menganti Wiyung no.24 Surabaya <br><br>
-                <strong>Whatsapp:</strong> +628123241512 <br>
-                <strong>Email:</strong> info@example.com<br>
+                <strong>Whatsapp:</strong> +628113107879 <br>
+                <strong>Email:</strong> jayasumbermas@gmail.com<br>
               </p>
               <div class="social-links d-flex mt-3">
-                <a href="https://facebook.com/bajaringansmjsby" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
-                <a href="https://www.instagram.com/sumbermasjayasby/" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
+                <a href="https://facebook.com/bajaringansmjsby" target="_blank" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.instagram.com/sumbermasjayasby/" target="_blank" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
               </div>
             </div>
           </div><!-- End footer info column-->
@@ -562,8 +565,8 @@
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Toko Kami</h4>
             <ul>
-              <li><a href="https://www.tokopedia.com/sumbermasjayasby">Tokopedia</a></li>
-              <li><a href="https://www.indonetwork.co.id/company/sumbermasjayasby">Indo Network</a></li>
+              <li><a href="https://www.tokopedia.com/sumbermasjayasby" target="_blank">Tokopedia</a></li>
+              <li><a href="https://www.indonetwork.co.id/company/sumbermasjayasby" target="_blank">Indo Network</a></li>
             </ul>
           </div><!-- End footer links column-->
 
@@ -589,7 +592,6 @@
   <!-- Vendor JS Files -->
   <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/aos/aos.js"></script>
-  <script src="assets/glightbox/js/glightbox.min.js"></script>
   <script src="assets/swiper/swiper-bundle.min.js"></script>
   <script src="assets/isotope-layout/isotope.pkgd.min.js"></script>
 
