--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
   <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/fontawesome/css/all.min.css" rel="stylesheet">
   <link href="assets/aos/aos.css" rel="stylesheet">
-  <!-- <link href="assets/glightbox/css/glightbox.min.css" rel="stylesheet"> -->
   <link href="assets/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/main.min.css" rel="stylesheet">
 </head>
 <body>
   
@@ -35,7 +34,7 @@
   <header id="header" class="header d-flex align-items-center">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="index" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
         <h1>Sumber Mas <span>Jaya.</span></h1>
       </a>
@@ -46,7 +45,8 @@
         <ul>
           <li><a href="#" class="active">Beranda</a></li>
           <li><a href="#services">Layanan</a></li>
-          <li><a href="#product">Produk unggulan</a></li>
+          <li><a href="#product">Produk Terbaik</a></li>
+          <li><a href="product">Produk</a></li>
           <li><a href="#testimoni">Testimoni</a></li>
           <li><a href="#about">Tentang Kami</a></li> 
           <li><a href="#contact">Kontak</a></li>
@@ -66,7 +66,7 @@
             <h2 data-aos="fade-down">Selamat Datang di <span>Sumber Mas Jaya</span></h2>
             <p data-aos="fade-up">Sumber Mas Jaya merupakan perusahaan yang bergerak di bidang perdagangan galvalum,
               berbagai macam material atap dan plafon.</p>
-            <a data-aos="fade-up" data-aos-delay="200" href="product.html" class="btn-get-started"> Daftar Produk</a>
+            <a data-aos="fade-up" data-aos-delay="200" href="product" class="btn-get-started"> Daftar Produk</a>
           </div>
         </div>
       </div>
@@ -113,7 +113,7 @@
             <h3>Produk</h3>
             <p> Menyediakan berbagai kebutuhan material galvalum, atap dan plafon dengan kualitas yang terbaik dan sesuai dengan kebutuhan pelanggan.
             </p>
-            <a href="product.html" class="readmore stretched-link">Learn more <i class="fa fa-arrow-right"></i></a>
+            <a href="product" class="readmore stretched-link">Learn more <i class="fa fa-arrow-right"></i></a>
           </div>
         </div><!-- End Service Item -->
 
@@ -179,7 +179,7 @@
     <div class="container" data-aos="fade-up">
 
       <div class="section-header">
-        <h2>Produk Unggulan</h2>
+        <h2>Produk Terbaik</h2>
         <p>Berikut ini adalah Produk unggulan kami berdasarkan permintaan pelanggan</p>
       </div>
 
@@ -557,8 +557,8 @@
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><a href="index.html">Beranda</a></li>
-              <li><a href="product.html">Daftar Produk</a></li>
+              <li><a href="index">Beranda</a></li>
+              <li><a href="product">Daftar Produk</a></li>
             </ul>
           </div><!-- End footer links column-->
 
@@ -596,6 +596,6 @@
   <script src="assets/isotope-layout/isotope.pkgd.min.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/main.min.js"></script>
 </body>
 </html>
