--- a/product.html
+++ b/product.html
@@ -21,12 +21,11 @@
   <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/fontawesome/css/all.min.css" rel="stylesheet">
   <link href="assets/aos/aos.css" rel="stylesheet">
-  <link href="assets/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/main.min.css" rel="stylesheet">
 
   <style>
     .bd-placeholder-img {
@@ -563,11 +562,10 @@
   <!-- Vendor JS Files -->
   <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/aos/aos.js"></script>
-  <script src="assets/glightbox/js/glightbox.min.js"></script>
   <script src="assets/swiper/swiper-bundle.min.js"></script>
   <script src="assets/isotope-layout/isotope.pkgd.min.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/main.min.js"></script>
 </body>
 </html>
