delete .html for deploy

--- a/product.html
+++ b/product.html
@@ -54,7 +54,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="index" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
         <h1>Sumber Mas <span>Jaya.</span></h1>
       </a>
@@ -62,7 +62,7 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" >Beranda</a></li>
+          <li><a href="index" >Beranda</a></li>
           <li><a href="#" class="active">Daftar Produk</a></li>
         </ul>
       </nav><!-- .navbar -->
@@ -527,8 +527,8 @@
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><a href="index.html">Beranda</a></li>
-              <li><a href="product.html">Daftar Produk</a></li>
+              <li><a href="index">Beranda</a></li>
+              <li><a href="product">Daftar Produk</a></li>
             </ul>
           </div><!-- End footer links column-->
 
